Fixed issue #968.